syntax = "proto3";

package trading;

import "trading/transformer.proto";

service FilterService {
  rpc Process(ProcessRequest) returns (ProcessResponse);
  rpc BulkProcess(BulkProcessRequest) returns (BulkProcessResponse);
}

message ProcessRequest {
  TransformResponse quote = 1;
}

message ProcessResponse {
  bool persisted = 1;
  string symbol = 2;
  string message = 3;
}

message BulkProcessRequest {
  repeated TransformResponse quotes = 1;
}

message BulkProcessResponse {
  repeated ProcessResponse results = 1;
}
